--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,41 @@ header nav.desktop{
     top: 40px;
 }
 
+nav.mobile{
+    top: 40px;
+    float: right;
+    width: 32px;
+    height: 32px;
+    background-size: 100% 100%;
+    cursor: pointer;
+    background-image: url('/images/icon_menu.png');
+    display: none;
+}
+
+nav.mobile ul{
+    display: none;
+    width: 100%;
+    left: 0;
+    top: 95px;
+    border-bottom: 4px solid #EB2D2D;
+    z-index: 999;
+    position: absolute;
+    text-align: center;
+    background-color: white;
+}
+
+nav.mobile li{
+    font-size: 23px;
+    padding: 20 0px;
+    font-style: italic;    
+}
+
+nav.mobile li a{
+    color: black;
+    text-decoration: none;
+}
+
+
 header nav.desktop ul{
     list-style-type: none;
 }
@@ -127,9 +162,13 @@ section.banner{
 }
 
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 768px){
     nav.desktop{
         display: none;
+    }
+
+    nav.mobile{
+        display: block;
     }
 }
 
