--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,36 @@ section.banner{
 /**/
 
 
+section.veiculos-destaque{
+    padding: 90px 2%;
+}
+
+.line-titulo{
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+}
+
+.ln1{
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 20px;
+    background-color: black;
+}
+
+section.veiculos-destaque h2{
+    position: relative;
+    background: white;
+    display: inline-block;
+    text-align: center;
+    font-size: 27px;
+    padding: 0 20px;
+    font-style: italic;
+    text-transform: uppercase;
+}
+
 
 @media screen and (max-width: 1440px){
     section.banner{
