--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,15 @@ section.veiculos-destaque{
     padding: 90px 2%;
 }
 
+section.veiculos-destaque .container{
+    max-width: 1000px;
+    padding: 40px 0;    
+}
+
+
+
 .line-titulo{
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     position: relative;
     text-align: center;
@@ -162,7 +169,7 @@ section.veiculos-destaque{
     background-color: black;
 }
 
-section.veiculos-destaque h2{
+section.veiculos-destaque .line-titulo h2{
     position: relative;
     background: white;
     display: inline-block;
@@ -173,6 +180,47 @@ section.veiculos-destaque h2{
     text-transform: uppercase;
 }
 
+.vitrine-destaque{
+    float: left;
+    width: 33.3%;
+}
+
+.vitrine-destaque .carro-img{
+    width: 100%;
+    padding-top: 100%;
+    border: 8px solid white;
+    background-size: 100% 100%;
+}
+
+.vitrine-destaque h2{
+    padding-left: 8px;
+    color: black;
+    font-style: italic;
+    font-size: 20px;
+}
+
+.vitrine-destaque p{
+    padding-top: 8px;
+    padding-left: 8px;
+    color: #353535;
+    font-size: 15px;
+    font-style: italic;
+}
+
+.vitrine-destaque a{
+    margin-left: 8px;
+    color: white;
+    font-size: 16px;
+    font-style: italic;
+    width: 150px;
+    margin-top: 10px;
+    text-align: center;
+    display: block;
+    line-height: 40px;
+    background-color: #EB2D2D;
+    text-decoration: none;
+    border-bottom: 6px solid #B21E1E;
+}
 
 @media screen and (max-width: 1440px){
     section.banner{
@@ -210,6 +258,34 @@ section.veiculos-destaque h2{
     
     .text-banner-single{
         font-size: 18px;        
+    }
+    
+    section.veiculos-destaque .line-titulo h2{
+        font-size: 23px;
+    }
+
+    section.veiculos-destaque .container{
+        max-width: 1000px;
+        padding: 40px 0;   
+        text-align: center; 
+    }
+    
+    .vitrine-destaque{
+        display: inline-block;
+        float: none;
+        width: 80%;
+        margin-top: 20px;
+    }
+
+    .vitrine-destaque a{
+        display: inline-block;
     }    
+    
+}
+
+@media screen and (max-width: 480px){
+    .vitrine-destaque{
+        width: 100%;        
+    }
     
 }
