--- a/css/style.css
+++ b/css/style.css
@@ -207,20 +207,107 @@ section.veiculos-destaque .line-titulo h2{
     font-style: italic;
 }
 
-.vitrine-destaque a{
-    margin-left: 8px;
-    color: white;
-    font-size: 16px;
-    font-style: italic;
-    width: 150px;
-    margin-top: 10px;
+.btn1{
     text-align: center;
     display: block;
     line-height: 40px;
     background-color: #EB2D2D;
     text-decoration: none;
     border-bottom: 6px solid #B21E1E;
+    color: white;
+    font-size: 16px;
+    font-style: italic;
+    width: 150px;
 }
+
+.vitrine-destaque a{
+    margin-left: 8px;    
+    margin-top: 10px;    
+}
+
+.servicos-descricao{
+    display: flex;
+}
+
+.half1{    
+    width: 50%;
+    text-align: right;
+    padding: 90px 0;
+    background: #242424;
+    color: white;
+}
+
+.half1-wraper{
+    padding-right: 30%;
+    text-align: left;
+    display: inline-block;
+}
+
+.half1-wraper h2{
+    font-weight: normal;
+    font-style: italic;
+    font-size: 32px;
+}
+
+.half1-wraper ul{
+    margin-left: 20px;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.half1-wraper li{
+    margin-left: 15px;
+}
+
+.half1-wraper a{
+    margin-left: 40px;
+    display: inline-block;
+    vertical-align: bottom;
+}
+
+.half2{
+    width: 50%;    
+    padding: 90px 100px;
+    background: #EB2D2D;
+    color: white;
+}
+
+.half2 h2{
+    font-weight: normal;
+    font-style: italic;
+    font-size: 32px;
+}
+
+.half2 .depoimento-single{
+    margin-top: 19px;
+}
+
+.depoimento-single p{
+    font-size: 22px;
+}
+
+.navigation{
+    float: left;
+    width: 100%;
+    max-width: 700px;
+    margin-top: 30px;
+}
+
+.arrows{
+    float: left;
+}
+
+.navigation img{
+    cursor: pointer;
+    margin: 0 20px;
+}
+
+.nome-depoimento{
+    float: right;
+    color: #252525;
+    font-size: 23px;
+}
+
 
 @media screen and (max-width: 1440px){
     section.banner{
@@ -239,8 +326,42 @@ section.veiculos-destaque .line-titulo h2{
     }
 }
 
+@media screen and (max-width: 1100px){
+    .half1{
+        text-align: center;
+    }
+
+    .half1-wraper{
+        text-align: left;
+        padding-right: 0;
+    }
+
+    .half1-wraper a{
+        display: block;
+        margin-left: 0;
+        margin-top: 15px;
+    }
+}
+
+
+@media screen and (max-width: 950px){
+    .half1-wraper a{
+        display: block;
+        margin-left: 0;
+        margin-top: 15px;
+    }
+} 
 
 @media screen and (max-width: 768px){
+    section.servicos-descricao{
+        flex-direction: column;
+    }
+
+    .half1,.half2{
+        padding: 80px 4%;
+        width: 100%;
+    }
+
     nav.desktop{
         display: none;
     }
