--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ section.veiculos-destaque .container{
     background-color: black;
 }
 
-section.veiculos-destaque .line-titulo h2{
+.line-titulo h2{
     position: relative;
     background: white;
     display: inline-block;
@@ -308,6 +308,89 @@ section.veiculos-destaque .line-titulo h2{
     font-size: 23px;
 }
 
+section.contato{
+    padding: 80px 2%;
+}
+
+section.contato form{
+    max-width: 600px;
+    margin: 50px auto;    
+}
+
+section.contato .input-wraper{
+    float: left;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+section.contato input[type=text]{
+    width: 100%;
+    border: 1px solid #ccc;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 15px;
+}
+
+section.contato textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    height: 120px;
+    padding: 8px;
+    resize: none;
+}
+
+section.contato form .input-wraper:nth-of-type(5){
+    text-align: center;
+}
+
+section.contato input[type=submit]{
+    border-right: 0;
+    border-left: 0;
+    border-top: 0;
+    cursor: pointer; 
+    display: inline-block;   
+}
+
+.w100{
+    width: 100%;
+}
+
+.w50{
+    width: 50%;
+}
+
+footer{
+    padding: 40px 2%;
+    background: #252525;
+}
+
+footer nav{
+    float: left;
+}
+
+footer nav ul{
+    list-style-type: none;
+}
+
+footer nav ul li{
+    float: left;
+    font-style: italic;
+    padding: 0 35px;
+    font-size: 19px;
+}
+
+footer nav ul a{
+    color: white;
+    text-decoration: none;
+}
+
+footer p{
+    float: right;
+    color: white;
+    font-size: 19px;
+    font-style: italic;
+}
+
 
 @media screen and (max-width: 1440px){
     section.banner{
@@ -353,6 +436,24 @@ section.veiculos-destaque .line-titulo h2{
 } 
 
 @media screen and (max-width: 768px){
+
+    footer nav{
+        display: none;
+    }
+
+    footer{
+        text-align: center;
+    }
+
+    footer p{
+        float: none;
+    }
+
+    .w50{
+        width: 100%;
+    }
+
+
     section.servicos-descricao{
         flex-direction: column;
     }
