--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,127 @@ footer p{
 }
 
 
+section.venda{
+    padding: 90px 0;
+    min-height: 90%;
+}
+
+.content-venda{
+    margin-top: 40px;
+}
+
+
+.sidebar{
+    float: left;
+    width: 30%;
+}
+
+.search1{
+    width: 300px;
+}
+
+.search1 h2{
+    font-size: 24px;
+    color: black;
+    font-weight: normal;
+}
+
+.search1 .barra-preco{
+    width: 100%;
+    height: 20px;
+    background: white;
+    border: 1px solid #ccc;
+    margin-top: 8px;
+    border-radius: 20px;
+    position: relative;
+}
+
+.barra-preco-fill{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 30%;
+    height: 20px;
+    border-radius: 20px;
+    background: rgb(200,200,200);    
+}
+
+.pointer-barra{
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    border-radius: 8px;
+    left: calc(30% - 13px);
+    top: -3px;
+    cursor: pointer;
+    background: rgb(210,210,210);
+    border: 1px solid black;
+}
+
+.valor-pesquisa{
+    margin-top: 8px;
+}
+.valor-pesquisa p{
+    color: black;
+    font-size: 15px;
+}
+
+.valor-pesquisa p:nth-of-type(1){
+    float: left;
+}
+
+.valor-pesquisa p:nth-of-type(2){
+    float: right;
+}
+
+.search2{
+    margin-top: 10px;
+}
+
+.search2 h2{
+    font-size: 30px;
+    color: black;
+    font-weight: normal;
+}
+
+.form-venda-wraper{
+    margin-top: 10px;
+}
+
+.form-venda-wraper input[type=checkbox]{
+    display: none;
+}
+
+.form-venda-wraper label{
+    width: 20px;
+    height: 20px;   
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    vertical-align: top;
+    cursor: pointer;
+}
+
+.form-venda-wraper span{
+    padding: 0 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+
+
+
+
+section.contato{
+    min-height: 90%;
+}
+
+section.sobre{
+    min-height: 90%;
+}
+
+
+
 @media screen and (max-width: 1440px){
     section.banner{
         background-size: 90% auto;
